syntax = "proto3";

package accelbyte.extend.async_messaging;
// Version v1.0.0

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/descriptor.proto";

option csharp_namespace = "AccelByte.Extend.AsyncMessaging";
option go_package = "accelbyte.net/extend/asyncMessaging";
option java_multiple_files = true;
option java_package = "net.accelbyte.extend.asyncMessaging";


message PublishMessageRequest {
  string body = 1;
  string topic = 2;  // together with MANAGED_QUEUE_SNS_TOPIC_ARN_BASE to construct the actual SNS ARN

  // TraceId
  map<string, string> metadata = 3;
}

service AsyncMessagingPublisherService {
  rpc PublishMessage(PublishMessageRequest) returns (google.protobuf.Empty) {
  };
}
