// Copyright (c) 2023 AccelByte Inc. All Rights Reserved.
// This is licensed software from AccelByte Inc, for limitations
// and restrictions contact your company contract manager.

syntax = "proto3";

option csharp_namespace = "AccelByte.Extend.ServiceExtension";
option go_package = "accelbyte.net/extend/serviceextension";
option java_package = "net.accelbyte.extend.serviceextension";
option java_multiple_files = true;

package service;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "permission.proto";

service Service {

  rpc Join (JoinRequest) returns (JoinResponse) {
    option (google.api.http) = {
      post: "/v1/admin/namespace/{namespace}/join"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Join"
      description: "Join"
      security: {
        security_requirement: {
          key: "Bearer"
          value: {}
        }
      }
    };
  }
}

message JoinRequest {
  string namespace = 1;
  string player_id = 2;
}

message JoinResponse {
}

// OpenAPI options for the entire API.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Service API";
    version: "1.0";
  };
  base_path: "/service";

  security_definitions: {
    security: {
      key: "Bearer";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "Authorization";
      }
    }
  };
};